@@ -3,6 +3,7 @@ CHANGES.txt - OpenPrinting CUPS Filters v1.0.5 - 2011-03-08
 
 CHANGES IN V1.0.5
 
+	- parallel backend: Break infinite loop (Ubuntu bug #936647).
 	- texttopdf: Complete the implementation of fontconfig-based font
 	  selection (Debian bug #663070).
 
